fixed css on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -87,14 +87,14 @@ button {
   right: 20px;
 }
 
-.pageContainer,
+/* .pageContainer,
 .offers,
 .profile,
 .listingDetails,
 .category,
 .explore {
   margin: 1rem;
-}
+} */
 @media (min-width: 1024px) {
   .pageContainer,
   .offers,
@@ -431,7 +431,7 @@ ul {
 
 .categoryListing {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-evenly; */
   align-items: center;
   margin-bottom: 1rem;
   position: relative;
@@ -482,14 +482,9 @@ ul {
   font-size: 1.1rem;
   color: #00cc66;
   margin-bottom: 0;
-  display: flex;
-  align-items: center;
 }
 
 .categoryListingInfoDiv {
-  display: flex;
-  justify-content: space-between;
-  max-width: 275px;
 }
 
 .categoryListingInfoText {
